Correcciones en iconos y alt de logo

--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -1,13 +1,13 @@
-{% if site.footer-links.dribbble %}<a href="https://dribbble.com/{{ site.footer-links.dribbble }}" tarjet="_BLANK"><i class="svg-icon dribbble">dribbble</i></a>{% endif %}
-{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}" tarjet="_BLANK"><i class="svg-icon email">email</i></a>{% endif %}
-{% if site.footer-links.facebook %}<a href="https://www.facebook.com/{{ site.footer-links.facebook }}" tarjet="_BLANK"><i class="svg-icon facebook">facebook</i></a>{% endif %}
-{% if site.footer-links.flickr %}<a href="https://www.flickr.com/{{ site.footer-links.flickr }}" tarjet="_BLANK"><i class="svg-icon flickr">flickr</i></a>{% endif %}
-{% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}" tarjet="_BLANK"><i class="svg-icon github">github</i></a>{% endif %}
-{% if site.footer-links.instagram %}<a href="https://instagram.com/{{ site.footer-links.instagram }}" tarjet="_BLANK"><i class="svg-icon instagram">instagram</i></a>{% endif %}
-{% if site.footer-links.linkedin %}<a href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}" tarjet="_BLANK"><i class="svg-icon linkedin">linkedin</i></a>{% endif %}
-{% if site.footer-links.pinterest %}<a href="https://www.pinterest.com/{{ site.footer-links.pinterest }}" tarjet="_BLANK"><i class="svg-icon pinterest">pinterest</i></a>{% endif %}
-{% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml" tarjet="_BLANK"><i class="svg-icon rss">rss</i></a>{% endif %}
-{% if site.footer-links.twitter %}<a href="https://www.twitter.com/{{ site.footer-links.twitter }}" tarjet="_BLANK"><i class="svg-icon twitter">twitter</i></a>{% endif %}
-{% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}" tarjet="_BLANK"><i class="svg-icon stackoverflow">stackoverflow</i></a>{% endif %}
-{% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}" tarjet="_BLANK"><i class="svg-icon youtube">youtube</i></a>{% endif %}
-{% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}" tarjet="_BLANK"><i class="svg-icon googleplus">googleplus</i></a>{% endif %}
+{% if site.footer-links.dribbble %}<a href="https://dribbble.com/{{ site.footer-links.dribbble }}" target="_BLANK"><i class="svg-icon dribbble">dribbble</i></a>{% endif %}
+{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}" target="_BLANK"><i class="svg-icon email">email</i></a>{% endif %}
+{% if site.footer-links.facebook %}<a href="https://www.facebook.com/{{ site.footer-links.facebook }}" target="_BLANK"><i class="svg-icon facebook">facebook</i></a>{% endif %}
+{% if site.footer-links.flickr %}<a href="https://www.flickr.com/{{ site.footer-links.flickr }}" target="_BLANK"><i class="svg-icon flickr">flickr</i></a>{% endif %}
+{% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}" target="_BLANK"><i class="svg-icon github">github</i></a>{% endif %}
+{% if site.footer-links.instagram %}<a href="https://instagram.com/{{ site.footer-links.instagram }}" target="_BLANK"><i class="svg-icon instagram">instagram</i></a>{% endif %}
+{% if site.footer-links.linkedin %}<a href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}" target="_BLANK"><i class="svg-icon linkedin">linkedin</i></a>{% endif %}
+{% if site.footer-links.pinterest %}<a href="https://www.pinterest.com/{{ site.footer-links.pinterest }}" target="_BLANK"><i class="svg-icon pinterest">pinterest</i></a>{% endif %}
+{% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml" target="_BLANK"><i class="svg-icon rss">rss</i></a>{% endif %}
+{% if site.footer-links.twitter %}<a href="https://www.twitter.com/{{ site.footer-links.twitter }}" target="_BLANK"><i class="svg-icon twitter">twitter</i></a>{% endif %}
+{% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}" target="_BLANK"><i class="svg-icon stackoverflow">stackoverflow</i></a>{% endif %}
+{% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}" target="_BLANK"><i class="svg-icon youtube">youtube</i></a>{% endif %}
+{% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}" target="_BLANK"><i class="svg-icon googleplus">googleplus</i></a>{% endif %}
