--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -1,5 +1,5 @@
-{% if site.footer-links.dribbble %}<a href="https://dribbble.com/{{ site.footer-links.dribbble }}" target="_BLANK"><i class="svg-icon dribbble">dribbble</i></a>{% endif %}
-{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}" target="_BLANK"><i class="svg-icon email">email</i></a>{% endif %}
+{% if site.footer-links.dribbble %}<a href="https://dribbble.com/{{ site.footer-links.dribbble }}" target="_BLANK"><i class="svg-icon dribbble"></i></a>{% endif %}
+{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}" target="_BLANK"><i class="svg-icon email"></i></a>{% endif %}
 {% if site.footer-links.facebook %}<a href="https://www.facebook.com/{{ site.footer-links.facebook }}" target="_BLANK"><i class="svg-icon facebook">facebook</i></a>{% endif %}
 {% if site.footer-links.flickr %}<a href="https://www.flickr.com/{{ site.footer-links.flickr }}" target="_BLANK"><i class="svg-icon flickr">flickr</i></a>{% endif %}
 {% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}" target="_BLANK"><i class="svg-icon github">github</i></a>{% endif %}
