--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -1,14 +1,14 @@
-<h3>Enlaces sociales</h3>
-{% if site.footer-links.dribbble %}<a href="https://dribbble.com/{{ site.footer-links.dribbble }}" target="_BLANK"><i class="svg-icon dribbble"></i></a>{% endif %}
-{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}" target="_BLANK"><i class="svg-icon email">Mail</i></a>{% endif %}
-{% if site.footer-links.facebook %}<a href="https://www.facebook.com/{{ site.footer-links.facebook }}" target="_BLANK"><i class="svg-icon facebook">FB</i></a>{% endif %}
-{% if site.footer-links.flickr %}<a href="https://www.flickr.com/{{ site.footer-links.flickr }}" target="_BLANK"><i class="svg-icon flickr">FLK</i></a>{% endif %}
-{% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}" target="_BLANK"><i class="svg-icon github">GH</i></a>{% endif %}
-{% if site.footer-links.instagram %}<a href="https://instagram.com/{{ site.footer-links.instagram }}" target="_BLANK"><i class="svg-icon instagram">IG</i></a>{% endif %}
-{% if site.footer-links.linkedin %}<a href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}" target="_BLANK"><i class="svg-icon linkedin">LKD</i></a>{% endif %}
-{% if site.footer-links.pinterest %}<a href="https://www.pinterest.com/{{ site.footer-links.pinterest }}" target="_BLANK"><i class="svg-icon pinterest">Pint</i></a>{% endif %}
-{% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml" target="_BLANK"><i class="svg-icon rss">RSS</i></a>{% endif %}
-{% if site.footer-links.twitter %}<a href="https://www.twitter.com/{{ site.footer-links.twitter }}" target="_BLANK"><i class="svg-icon twitter">TW</i></a>{% endif %}
-{% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}" target="_BLANK"><i class="svg-icon stackoverflow">SOF</i></a>{% endif %}
-{% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}" target="_BLANK"><i class="svg-icon youtube">YT</i></a>{% endif %}
-{% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}" target="_BLANK"><i class="svg-icon googleplus">G+</i></a>{% endif %}
+<h2>Enlaces sociales</h2>
+{% if site.footer-links.dribbble %}<a href="https://dribbble.com/{{ site.footer-links.dribbble }}" target="_BLANK"><i class="svg-icon dribbble" aria-label"dribbble"></i></a>{% endif %}
+{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}" target="_BLANK"><i class="svg-icon email" aria-label="Correo electrónico"></i></a>{% endif %}
+{% if site.footer-links.facebook %}<a href="https://www.facebook.com/{{ site.footer-links.facebook }}" target="_BLANK"><i class="svg-icon facebook" aria-label="Facebook"></i></a>{% endif %}
+{% if site.footer-links.flickr %}<a href="https://www.flickr.com/{{ site.footer-links.flickr }}" target="_BLANK"><i class="svg-icon flickr" aria-label="Flickr"></i></a>{% endif %}
+{% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}" target="_BLANK"><i class="svg-icon github" aria-label="GitHub"></i></a>{% endif %}
+{% if site.footer-links.instagram %}<a href="https://instagram.com/{{ site.footer-links.instagram }}" target="_BLANK"><i class="svg-icon instagram" aria-label="Instagram"></i></a>{% endif %}
+{% if site.footer-links.linkedin %}<a href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}" target="_BLANK"><i class="svg-icon linkedin" aria-label="Linkedin"></i></a>{% endif %}
+{% if site.footer-links.pinterest %}<a href="https://www.pinterest.com/{{ site.footer-links.pinterest }}" target="_BLANK"><i class="svg-icon pinterest" aria-label="pinterest"></i></a>{% endif %}
+{% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml" target="_BLANK"><i class="svg-icon rss" aria-label="Fuente RSS"></i></a>{% endif %}
+{% if site.footer-links.twitter %}<a href="https://www.twitter.com/{{ site.footer-links.twitter }}" target="_BLANK"><i class="svg-icon twitter" aria-label="Twitter"></i></a>{% endif %}
+{% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}" target="_BLANK"><i class="svg-icon stackoverflow" aria-label="Stack Overflow"></i></a>{% endif %}
+{% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}" target="_BLANK"><i class="svg-icon youtube" aria-label="Youtube"></i></a>{% endif %}
+{% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}" target="_BLANK"><i class="svg-icon googleplus" aria-label="Google Plus"></i></a>{% endif %}
