--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 <article class="post">
-  <h1>{{ page.title }}</h1>
+  <h2>{{ page.title }}</h2>
   <div class="entry">
     {{ content }}
   </div>
   <div class="date">
-    Escrito en {{ page.date | date: "%B %e, %Y" }}
+    Escrito el {{ page.date | date: "%e de %B de %Y" }}
   </div>
   {% include disqus.html %}
 </article>
